infrastructure/configs/network-policies/external-secrets/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eso-to-sdk-server
spec:
  podSelector:
    matchLabels:
      app: bitwarden-sdk-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: external-secrets
      ports:
        - port: 9998
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apiserver-to-webhook
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 10250
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bitwarden-cloud
spec:
  podSelector:
    matchLabels:
      app: bitwarden-sdk-server
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apiserver
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - port: 443
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.9/32
      ports:
        - port: 6443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eso-to-sdk-server-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: bitwarden-sdk-server
      ports:
        - port: 9998
          protocol: TCP
